# kuiperdb

./: .dockerignore  .gitignore  BUILD.md  CHANGES.md  CUSTOM_ID_FEATURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FILTERING.md  LICENSE  README.md  TELEMETRY.md  config.json  demo_relations.ps1  package-lock.json  version.json
.github/workflows/: rust.yml
scripts/: manage-logs.ps1  npm-publish-simple.ps1  npm-publish.ps1  podman-backup.ps1  podman-build.ps1  podman-health.ps1  podman-inspect-volume.ps1  podman-restore.ps1  podman-run-dev.ps1  podman-run.ps1  podman-stop.ps1  podman-systemd.ps1
src/examples/: LM_STUDIO_SETUP.md  README.md  advanced_embedded.rs  embedded_app.rs  simple_embedded.rs  with_embeddings.rs
src/kuiperdb-core/: Cargo.toml
src/kuiperdb-core/src/: cache.rs  chunking.rs  config.rs  embedder.rs  graph.rs  index.rs  lib.rs  models.rs  search.rs  store.rs  worker.rs
src/kuiperdb-react/: INTEGRATION.md  README.md  package-lock.json  package.json  tsconfig.json
src/kuiperdb-react/src/: KuiperDbProvider.tsx  index.ts
src/kuiperdb-rs/: Cargo.toml
src/kuiperdb-rs/src/: client.rs  lib.rs
src/kuiperdb-server/: Cargo.toml  config.json
src/kuiperdb-server/docs/: README.md  api-chunking.md  api-documents.md  api-graph.md  api-relations.md  api-search.md
src/kuiperdb-server/docs/plans/: v0.1.0.md  v0.2.0.md
src/kuiperdb-server/src/: api.rs  lib.rs  main.rs  telemetry.rs
src/kuiperdb-ts/: README.md  example.ts  package-lock.json  package.json  tsconfig.json
src/kuiperdb-ts/src/: client.ts  index.ts  types.ts
src/kuiperdb-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/kuiperdb-ui/src/: App.tsx  main.tsx
src/kuiperdb-ui/src/api/: client.ts
src/kuiperdb-ui/src/components/: ContentViewer.tsx  GraphView.tsx  TreeNodeItem.tsx  TreeView.tsx
src/kuiperdb-ui/src/hooks/: useTreeData.ts
src/kuiperdb-ui/src/providers/: README.md  index.ts
src/kuiperdb-ui/src/types/: index.ts
src/kuiperdb-ui/src/utils/: database.ts
