[package]
name = "kuiperdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true

# Caching
lru = "0.12"
sha2 = "0.10"
hex = "0.4"

# Vector index (HNSW)
hnsw_rs = "0.3"

# Parallel processing
rayon = "1.10"
futures = "0.3"

# Tokenization for chunking
tiktoken-rs = "0.5"

# Graph algorithms
petgraph = "0.6"

# HTTP client for embeddings
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
