[package]
name = "kuiperdb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kuiperdb-server"
path = "src/main.rs"

[lib]
name = "kuiperdb_server"
path = "src/lib.rs"

[dependencies]
# Core library
kuiperdb-core = { path = "../kuiperdb-core" }

# Async runtime
tokio.workspace = true

# HTTP server
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Telemetry
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web = "0.7"
tracing-appender = "0.2"
rolling-file = "0.2"

# Utilities
uuid.workspace = true
chrono.workspace = true
[[example]]
name = "simple_embedded"
path = "../examples/simple_embedded.rs"

[[example]]
name = "embedded_app"
path = "../examples/embedded_app.rs"

[[example]]
name = "advanced_embedded"
path = "../examples/advanced_embedded.rs"

[[example]]
name = "with_embeddings"
path = "../examples/with_embeddings.rs"